--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": [
-        "@babel/env"
+    "presets": ["@babel/env"],
+    "plugins": [
+        [
+            "import",
+            {
+                "libraryName": "view-design",
+                "libraryDirectory": "src/components"
+            }
+        ]
     ]
 }
